# Generated by Django 6.0.5 on 2026-06-18 20:56

from decimal import Decimal

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):
    initial = True

    dependencies = [
        ("banking", "0002_banktransaction_ignore_reason"),
    ]

    operations = [
        migrations.CreateModel(
            name="Holding",
            fields=[
                ("id", models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name="ID")),
                ("simplefin_id", models.CharField(max_length=255)),
                ("symbol", models.CharField(blank=True, default="", max_length=32)),
                ("description", models.CharField(blank=True, default="", max_length=500)),
                ("shares", models.DecimalField(decimal_places=6, default=Decimal("0"), max_digits=18)),
                ("cost_basis", models.DecimalField(blank=True, decimal_places=2, max_digits=16, null=True)),
                ("market_value", models.DecimalField(blank=True, decimal_places=2, max_digits=16, null=True)),
                ("purchase_price", models.DecimalField(blank=True, decimal_places=2, max_digits=16, null=True)),
                ("currency", models.CharField(default="USD", max_length=3)),
                ("raw", models.JSONField(blank=True, default=dict)),
                ("created_at", models.DateTimeField(auto_now_add=True)),
                ("updated_at", models.DateTimeField(auto_now=True)),
                (
                    "bank_account",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE, related_name="holdings", to="banking.bankaccount"
                    ),
                ),
            ],
            options={
                "db_table": "investments_holding",
                "ordering": ["symbol", "description"],
                "unique_together": {("bank_account", "simplefin_id")},
            },
        ),
    ]
